@@ -90,6 +90,7 @@ class NemoTerminal(object):
         self.term.connect_after("child-exited", self._on_term_child_exited)
         self.term.connect_after("popup-menu", self._on_term_popup_menu)
         self.term.connect("button-release-event", self._on_term_popup_menu)
+        
         #Accelerators
         accel_group = Gtk.AccelGroup()
         self._window.add_accel_group(accel_group)
@@ -115,9 +116,16 @@ class NemoTerminal(object):
                 )
         self.term.drag_dest_add_uri_targets()
         self.term.connect("drag_data_received", self._on_drag_data_received)
-        #Swin
-        self.swin = Gtk.ScrolledWindow()
-        self.swin.nt = self
+        
+        # Container
+        self.vscrollbar = Gtk.VScrollbar.new(self.term.adjustment)
+        
+        self.hbox = Gtk.HBox()
+        self.hbox.pack_start(self.term, True, True, 0)
+        self.hbox.pack_end(self.vscrollbar, False, False, 0)
+        
+        self.hbox.nt = self # store a reference to this obj
+        
         #Popup Menu
         self.menu = Gtk.Menu()
         #MenuItem => copy
@@ -191,9 +199,7 @@ class NemoTerminal(object):
         gfile = Gio.file_parse_name(workingDir)
         workingDirUri = gfile.get_uri()
         print workingDirUri
-        #import pydevd
-        #pydevd.settrace()
-        # Like, change the current window directory here.
+        # TODO: something useful (like changing the working dir)
         return
 
     def _paste_filenames_clipboard(self):
@@ -236,11 +242,34 @@ class NemoTerminal(object):
 
     def get_widget(self):
         """Return the top-level widget of Nemo Terminal."""
-        if not self.term.get_parent():
-            self.swin.add(self.term)
+        #if not self.term.get_parent():
+        #    self.hbox.add(self.term)
         if self._visible:
-            self.swin.show_all()
-        return self.swin
+            self.hbox.show_all()
+        return self.hbox
+
+#     def resize_term(self):
+#         """Correctly update the size of VTE terminal view"""
+#         print "resize term"
+#         height = self.swin.get_allocated_height()
+#         width = self.swin.get_allocated_width()
+#         
+#         # bail if nothing to do
+#         if self.term.get_allocated_height() == height and \
+#             self.term.get_allocated_width() == width:
+#             return
+#         
+#         char_width = self.term.get_char_width()
+#         char_height = self.term.get_char_height()
+#         
+#         inner_border = self.term.get_style().get_property("inner-border")
+#         new_grid_width = width - (inner_border.left + inner_border.right) / char_width 
+#         new_grid_height = height - (inner_border.top + inner_border.bottom) / char_height
+#         
+#         grid_width = new_grid_width if new_grid_width > 0 else 0
+#         grid_height = new_grid_height if new_grid_height > 0 else 0
+# 
+#         self.term.set_size(grid_width, grid_height)
 
     def set_visible(self, visible):
         """Change the visibility of Nemo Terminal.
@@ -250,10 +279,10 @@ class NemoTerminal(object):
         """
         self._visible = visible
         if visible:
-            self.swin.show_all()
+            self.hbox.show_all()
             self._window.set_focus(self.term)
         else:
-            self.swin.hide()
+            self.hbox.hide()
 
     def show_about_dialog(self):
         """Display the about dialog."""
@@ -282,8 +311,9 @@ class NemoTerminal(object):
         except OSError:
             pass
         #Remove some widgets
+        self.vscrollbar.destroy()
         self.term.destroy()
-        self.swin.destroy()
+        self.hbox.destroy()
         #Remove callback
         if hasattr(self._window, "toggle_hide_cb"):
             self._window.toggle_hide_cb.remove(self.set_visible)
@@ -321,7 +351,7 @@ class NemoTerminal(object):
         Args:
             height -- The new height (in lines).
         """
-        self.swin.set_size_request(-1,
+        self.hbox.set_size_request(-1,
                 height * self.term.get_char_height() + 2)
 
     def _on_term_popup_menu(self, widget, event=None):
@@ -402,7 +432,7 @@ class Crowbar(object):
             #Find the Nemo Terminal
             nterm = None
             for crowbar_ppp_child in crowbar_ppp.get_children():
-                if type(crowbar_ppp_child) == Gtk.ScrolledWindow:
+                if type(crowbar_ppp_child) == Gtk.HBox:
                     if hasattr(crowbar_ppp_child, "nt"):
                         nterm = crowbar_ppp_child.nt
                     break
@@ -429,6 +459,7 @@ class Crowbar(object):
                 vbox.pack_start(crowbar_pp_children[1], True, True, 0)
             #Create the terminal
             nterm = NemoTerminal(self._uri, self._window)
+
             if hasattr(self._window, "term_visible"):
                 nterm.set_visible(self._window.term_visible)
             if settings.get_enum("terminal-position") == 0:
@@ -452,18 +483,18 @@ class Crowbar(object):
             if not vpan:
                 print("[%s] W: Can't find the VPaned..." % __app_disp_name__)
                 return
-            swin = None
+            hbox = None
             for child in vpan.get_children():
-                if type(child) == Gtk.ScrolledWindow:
-                    swin = child
-            if not swin:
-                print("[%s] W: Can't find the ScrolledWindow..."
+                if type(child) == Gtk.HBox:
+                    hbox = child
+            if not hbox:
+                print("[%s] W: Can't find the GtkHBox..."
                         % __app_disp_name__)
                 return
-            if not hasattr(swin, "nt"):
+            if not hasattr(hbox, "nt"):
                 print("[%s] W: Can't find the Nemo Terminal instance..."
                         % __app_disp_name__)
-            swin.nt.destroy()
+            hbox.nt.destroy()
 
 
 class NemoTerminalProvider(GObject.GObject, Nemo.LocationWidgetProvider):
